Closed
Bug 250786
Opened 21 years ago
Closed 21 years ago
[Xlib] scaled images render as garbage
Categories
(Core Graveyard :: GFX: Xlib, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha5
People
(Reporter: Biesinger, Assigned: Biesinger)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
2.17 KB,
patch
|
roland.mainz
:
review+
|
Details | Diff | Splinter Review |
see, for example, the bookmark folder icon in the classic theme - it's 22x16,
downscaled to 16x16 (I think).
related to bug 250635?
| Assignee | ||
Comment 2•21 years ago
|
||
hm... this specific image does not use -moz-image-region. also, this is limited
to the xlib toolkit.
Summary: scaled gifs render as garbage → [Xlib] scaled gifs render as garbage
| Assignee | ||
Comment 3•21 years ago
|
||
this regressed between 2003-11-23 02:00 and 2003-11-23 14:00 (PDT)
list of checkins:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2003-11-23+12%3A00+CEST&maxdate=2003-11-24+00%3A00+CEST&cvsroot=%2Fcvsroot
this indicates Bug 150881
| Assignee | ||
Updated•21 years ago
|
Keywords: regression
| Assignee | ||
Comment 4•21 years ago
|
||
in fact, this seems to affect also pngs with alpha channels as well as images
without any transparency
Summary: [Xlib] scaled gifs render as garbage → [Xlib] scaled images render as garbage
| Assignee | ||
Comment 5•21 years ago
|
||
Assignee: roland.mainz → cbiesinger
Status: NEW → ASSIGNED
| Assignee | ||
Comment 6•21 years ago
|
||
So, the problem was: aDX/aDY are coordinates pointing somewhere into the
rendering context. So they are just used to position the scaled image. Trying to
put the scaled image into the buffer at aDX/aDY position probably wrote to
random memory, although I didn't verify that; possibly RectStretch just did nothing.
So the fix is: Scale the image into position (0, 0) in the allocated buffer, and
draw that result at (aDX, aDY).
Target Milestone: --- → mozilla1.8beta
| Assignee | ||
Updated•21 years ago
|
Attachment #153577 -
Flags: review?(tor)
| Assignee | ||
Comment 7•21 years ago
|
||
Comment on attachment 153577 [details] [diff] [review]
patch
this doesn't fix pngs with an alpha channel
Attachment #153577 -
Attachment is obsolete: true
Attachment #153577 -
Flags: review?(tor) → review-
| Assignee | ||
Comment 8•21 years ago
|
||
testcase for scaling PNGs with alpha:
data:text/html,<img src="http://www.w3.org/Graphics/PNG/alphatest.png"
width="300">
| Assignee | ||
Updated•21 years ago
|
Attachment #153578 -
Flags: review?(tor)
| Assignee | ||
Updated•21 years ago
|
Attachment #153578 -
Flags: review?(tor) → review?(roland.mainz)
| Assignee | ||
Updated•21 years ago
|
Target Milestone: mozilla1.8beta → mozilla1.8alpha5
Comment 9•21 years ago
|
||
Attachment #153578 -
Flags: review?(roland.mainz) → review+
| Assignee | ||
Comment 10•21 years ago
|
||
Checking in gfx/src/xlib/nsImageXlib.cpp;
/cvsroot/mozilla/gfx/src/xlib/nsImageXlib.cpp,v <-- nsImageXlib.cpp
new revision: 1.47; previous revision: 1.46
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•