Bug 250786 [Xlib] scaled images render as garbage r=roland.mainz